[package]
name = "pc_looper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
process-memory = "0.3.0"
colored = "2.0.0"
winapi = { version = "0.3", features = ["tlhelp32", "winuser", "windef", "minwindef", "processthreadsapi", "minwinbase"] }